Include latest updates

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,5 +15,5 @@
 {{ end }}
 
 {{ if .Params.rsvp.enabled | default .Site.Params.map.enabled | default false}}
-<script async defer src="https://www.google.com/recaptcha/api.js?render=RECAPTCHA"></script> // TODO: use template
+<script async defer src="https://www.google.com/recaptcha/api.js?render=6LcK88IkAAAAAJ1NsOqxot9q1yflYjHdYc-l8OLd"></script>
 {{ end }}
