--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,4 +12,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/flexslider.min.css"></link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <script src="https://kit.fontawesome.com/{{ .Site.Params.fontawesomeid }}.js" crossorigin="anonymous"></script>
+
+    <script>
+        var digitalData = {}
+        digitalData.calendar = {}
+        digitalData.calendar.title = "{{ .Site.Params.rsvp.calendarInvite.title }}"
+        digitalData.calendar.startDate = "{{ .Site.Params.rsvp.calendarInvite.startDate }}"
+        digitalData.calendar.endDate = "{{ .Site.Params.rsvp.calendarInvite.endDate }}"
+        digitalData.calendar.address = "{{ .Site.Params.rsvp.calendarInvite.address }}"
+        digitalData.rsvp = {}
+        digitalData.rsvp.alertTitle = "{{ .Site.Params.rsvp.alert.title }}"
+        digitalData.rsvp.alertText = "{{ .Site.Params.rsvp.alert.text }}"
+        digitalData.rsvp.recaptcha = ("{{ .Site.Params.rsvp.recaptcha.enabled }}" === 'true' )
+        digitalData.rsvp.recaptchaId = "{{ .Site.Params.rsvp.recaptcha.id }}"
+        digitalData.rsvp.postUrl = "{{ .Site.Params.rsvp.postUrl }}"
+    </script>
 </head>
